# ShaderBoiler

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/2.adding_names/: main.cpp
examples/3.arrays/: main.cpp
examples/4.multidimensional_arrays/: main.cpp
examples/5.swizzle_masks/: main.cpp
examples/hellow_world/: main.cpp
include/: array.h  binary_operators.h  builetin_constants.h  builetin_variables.h  context.h  datatypes.h  functions.h  shaderboiler.h
include/detail/: macroses.h  node.h  output_proxy.h  token_generator.h  variable.h
