if (CMAKE_VERSION VERSION_LESS "3.1")
	if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
		set (CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
	endif ()
else ()
	set (CMAKE_CXX_STANDARD 11)
endif ()

file(GLOB HEADERS ../include/*.h ../include/detail/*.h)
add_executable(1.hellow_world 1.hellow_world/main.cpp ${HEADERS})
add_executable(2.adding_names 2.adding_names/main.cpp ${HEADERS})
add_executable(3.arrays 3.arrays/main.cpp ${HEADERS})
add_executable(4.multidimensional_arrays 4.multidimensional_arrays/main.cpp ${HEADERS})
add_executable(5.swizzle_masks 5.swizzle_masks/main.cpp ${HEADERS})
